[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fondo_iconos/botonContinuar.png" type="Texture" id=1]
[ext_resource path="res://Fondo_iconos/botonContinuarP.png" type="Texture" id=2]
[ext_resource path="res://Escenas_Scripts/pantallaCompletado.gd" type="Script" id=3]

[node name="pantallaCompletado" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="tituloFiguraGeometrica" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -7.0
margin_right = 12.0
margin_bottom = 7.0
text = "TRIANGULO"
align = 1
valign = 1

[node name="botonContinuar" type="TouchScreenButton" parent="."]
position = Vector2( 300, 343 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 1 )
pressed = ExtResource( 2 )

[node name="tiempoLogrado" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -110.0
margin_top = -139.0
margin_right = 49.0
margin_bottom = -125.0
text = "Lograste completarlo en "

[node name="cartelFelicitacion" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -104.0
margin_right = 23.0
margin_bottom = -90.0
text = "ยก Felicidades !"

[node name="gatoProfesor" type="AnimatedSprite" parent="."]
visible = false

[connection signal="pressed" from="botonContinuar" to="." method="botonContinuar_pressed"]
